--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="./assets/logo.svg" alt="Logo Habits" />
 
       <button>
-        <img src="./assets/plus.svg" alt="Icone plus roxo" />
+        <img src="./assets/plus.svg" alt="Icone plus laranja" />
 
         <div>Registar o meu dia</div>
       </button>
@@ -34,11 +34,11 @@
       <!--ICONES-->
       <div class="habits">
         <div class="habit" data-name="run">🏃🏻‍♂️</div>
-        <div class="habit" data-name="water">💧</div>
+        <div class="habit" data-name="study">💻</div>
         <div class="habit" data-name="gym">💪🏻</div>
-        <div class="habit" data-name="sleep">💤</div>
         <div class="habit" data-name="walk">🦮</div>
-        <div class="habit" data-name="food">🥗</div>
+        <div class="habit" data-name="read">📖</div>
+        <div class="habit" data-name="bike">🚲</div>
       </div>
       <!--caixas check-->
       <div class="days"></div>
